# cosmic-altswitcher

./: .gitignore  Cargo.toml  README.md
data/: com.github.jibsta210.CosmicAltSwitcher.desktop  com.github.jibsta210.CosmicAltSwitcher.service
src/: app.rs  main.rs
src/backend/: mod.rs
src/backend/wayland/: mod.rs
